src/test/deca/syntax/invalid/extension/MatTailleMalPlacee.deca
// mismatched input ']' expecting {STRING, '{', '(', 'false', 'true', 'readInt', 'readFloat', 'new', 'this', 'null', '-', '!', FLOAT, INT, IDENT}
// Description:
//    Tableau avec taille mal placée
//

{
    int[3][][] a = {1, 2, 3};
}

